[package]
name = "codeforces-api"
version = "0.2.2"
authors = ["thud"]
edition = "2018"
description = "Use auth api provided by Codeforces + download testcases"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.61"
reqwest = { version = "0.11", features = ["blocking", "json"] }
select = "0.5.0"
hex = "0.4.2"
sha2 = "0.9.2"
