[package]
name = "codeforces-api"
version = "0.3.3"
authors = ["thud"]
edition = "2018"
description = "Use auth api provided by Codeforces + download testcases"
repository = "https://github.com/thud/codeforces-api"
documentation = "https://docs.rs/codeforces-api/"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.61"
serde_yaml = "0.8.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
select = "0.5.0"
rand = "~0.8.0"
hex = "0.4.2"
sha2 = "0.9.2"
regex = "~1.4.3"
lazy_static = "~1.4.0"
