[package]
name = "codeforces-api"
version = "0.3.4"
authors = ["thud"]
edition = "2018"
description = "Use auth api provided by Codeforces + download testcases"
repository = "https://github.com/thud/codeforces-api"
documentation = "https://docs.rs/codeforces-api/"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.61"
serde_yaml = { version = "0.8.15", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"] }
select = { version = "0.5.0", optional = true }
rand = "~0.8.0"
hex = "0.4.2"
sha2 = "0.9.2"
regex = { version = "~1.4.3", optional = true }
lazy_static = { version = "~1.4.0", optional = true }

[features]
default = ["use_testcase_fetcher"]
use_testcase_fetcher = ["regex", "lazy_static", "select"]
